Corrected alignment of hover button

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Raleway', sans-serif;
   color: rgb(255, 255, 255);
   text-align: center;
-  font-size: 100px;
+  font-size: 4em;
   padding: 10px 0 40px;
 }
 
@@ -96,6 +96,7 @@ a {
   justify-content: center;
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100px;
   margin: 30px 0;
